syntax = "proto3";

package go.micro.srv.user;

service UserService {
    rpc Create (User) returns (Response) {}
    rpc Delete (User) returns (Response) {}
    rpc Get (User) returns (User) {}
    rpc GetAll (Request) returns (Users) {}
    rpc UpdateInfo (User) returns (Response) {}
    rpc Auth (User) returns (Token) {}
    rpc Ping(Request) returns (Response) {}
}

// 用户信息
message User {
    int64 id = 1;
    string phone = 2;
    string password = 3;
	string salt = 4;
	int64 created_unix = 5;
    int64 updated_unix = 6;
}

message Request {
}
message Response {
}

message ToRevokeToken {
    string id = 1;
    string token = 2;
}

message Users {
    repeated User users = 1;
}

message Token {
    string token = 1;
}
